--- a/inventory-app/src/app/dashboard/dashboard.component.html
+++ b/inventory-app/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,12 @@
 <body>
 <div class="card">
-    <app-grid></app-grid>
-
     <div class="card-head">Lorem ipsum - dashboard</div>
     <div class="card-body">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas ducimus soluta, quasi aut ipsa non, ullam enim rem repudiandae, vitae provident animi. Inventore rerum, voluptas optio dignissimos blanditiis modi illo!
     </div>
+    
 </div>
+<app-map></app-map>
+<p-chart type="doughnut" [data]="datadoughnut"></p-chart>
+
 </body>
