--- a/inventory-app/src/app/grid/grid.component.html
+++ b/inventory-app/src/app/grid/grid.component.html
@@ -16,7 +16,10 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <div>Card Content Here</div>
+          <div>Card Content Here
+            <app-map></app-map>
+
+          </div>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
