--- a/inventory-app/src/app/items/items.component.html
+++ b/inventory-app/src/app/items/items.component.html
@@ -9,6 +9,11 @@
         <table mat-table [dataSource]="dataSource" matSort>
       
           <!-- ID Column -->
+          <ng-container matColumnDef="itemID">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Item ID </th>
+            <td mat-cell *matCellDef="let row"> {{row.itemID}} </td>
+          </ng-container>
+
           <ng-container matColumnDef="itemName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Item Name </th>
             <td mat-cell *matCellDef="let row"> {{row.itemName}} </td>
@@ -28,7 +33,7 @@
                 <button mat-icon-button (click)="editItem(row)" color="primary">
                     <mat-icon>edit</mat-icon>
                 </button>
-                <button mat-icon-button (click)="deleteItem(row.id)" color="warn">
+                <button mat-icon-button (click)="deleteItem(row.itemID)" color="warn">
                     <mat-icon>delete</mat-icon>
                 </button>
             </td>
