front end styling

--- a/inventory-app/src/app/app.component.html
+++ b/inventory-app/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
-<app-body
+<app-sidenav appPrimaryTheme (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
+<app-body  appPrimaryTheme 
     [collapsed]="isSideNavCollapsed"
     [screenWidth]="screenWidth"
 ></app-body>
