--- a/inventory-app/src/app/dashboard/dashboard.component.html
+++ b/inventory-app/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,11 @@
-<body>
-<div class="card">
+<body >
+
+<div  class="card">
     <div class="card-head">Lorem ipsum - dashboard</div>
-    <div class="card-body">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas ducimus soluta, quasi aut ipsa non, ullam enim rem repudiandae, vitae provident animi. Inventore rerum, voluptas optio dignissimos blanditiis modi illo!
-    </div>
-    
 </div>
-<app-map></app-map>
-<p-chart type="doughnut" [data]="datadoughnut"></p-chart>
+<app-map class="map"></app-map>
+<p-chart class="pie-chart" width="30vw" height="30vh" type="doughnut" [data]="datadoughnut"></p-chart>
+
+
 
 </body>
