--- a/inventory-app/src/app/dialog/dialog.component.html
+++ b/inventory-app/src/app/dialog/dialog.component.html
@@ -1,17 +1,30 @@
 <h1 mat-dialog-title id="form-title">Add Item Form</h1>
 <div mat-dialog-content>
     <form [formGroup]="productForm">
+
         <mat-form-field appearance="outline">
             <mat-label>Item Name</mat-label>
             <input formControlName="itemName" matInput placeholder="Placeholder">
-            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
         </mat-form-field>
         <mat-form-field appearance="outline">
             <mat-label>Item Category</mat-label>
             <input formControlName="itemCategory" matInput placeholder="Placeholder">
-            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
         </mat-form-field>
-       
+        <mat-form-field appearance="outline">
+            <mat-label>Item Company</mat-label>
+            <input formControlName="itemCompany" matInput placeholder="Placeholder">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Item Price</mat-label>
+            <input formControlName="itemPrice" matInput placeholder="Placeholder">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Item Quantity</mat-label>
+            <input formControlName="itemQuantity" matInput placeholder="Placeholder">
+        </mat-form-field>
+
+
+        
     </form>
 </div>
 <div mat-dialog-action [align]="'end'">
