add warehouse frontend+backend

--- a/inventory-app/src/styles.scss
+++ b/inventory-app/src/styles.scss
@@ -29,12 +29,12 @@ body {
     border-radius: .5rem;
     background-color: #1B2430;
     margin: 1.25rem 0 1.25rem 0;
-    box-shadow: 0 .25rem .5rem #1B2430;
+    box-shadow: 0 .25rem .5rem #A6B1E1;
     color: #00ADB5;
 
     .card-head {
         padding: 1rem 1.5rem;
-        border-bottom: 5px solid #171717;
+        border-bottom: 5px solid #A6B1E1;
         font-size: 1rem;
         font-weight: 600;
     }
