--- a/inventory-app/src/app/body/body.component.scss
+++ b/inventory-app/src/app/body/body.component.scss
@@ -1,12 +1,12 @@
 .body {
     width: calc(100% - 5rem);
-    height: 100vh;
+    height: 100%;
     margin-left: 5rem;
     z-index: 0;
     position: relative;
     top: 0;
     transition: all .5s ease;
-    background: #171717;
+    background: #A6B1E1;
     padding: 3rem;
 }
 
