--- a/inventory-app/src/app/map/map.component.scss
+++ b/inventory-app/src/app/map/map.component.scss
@@ -1,3 +1,8 @@
+:host{
+        display: block;
+        width: 50%;
+        height: 50%;
+}
 .map-container {
     position: absolute;
     top: 0;
@@ -13,6 +18,6 @@
   }
   
   #map {
-    height: 50%;
-    width: 50%;
+    height: 100%;
+    width: 100%;
   }
