handle max capacity,update dashboard

--- a/inventory-app/src/app/dialog/dialog.component.html
+++ b/inventory-app/src/app/dialog/dialog.component.html
@@ -22,6 +22,11 @@
             <mat-label>Item Quantity</mat-label>
             <input formControlName="itemQuantity" matInput placeholder="Placeholder">
         </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Warehouse ID</mat-label>
+            <input formControlName="warehouseID" matInput placeholder="Placeholder">
+        </mat-form-field>
+
 
 
         
