--- a/inventory-app/src/app/map/map.component.scss
+++ b/inventory-app/src/app/map/map.component.scss
@@ -1,7 +1,7 @@
 :host{
-        display: block;
-        width: 50%;
-        height: 50%;
+        display: inline-block;
+        width: 55vw;
+        height: 90vh;
 }
 .map-container {
     position: absolute;
