--- a/inventory-app/src/app/body/body.component.scss
+++ b/inventory-app/src/app/body/body.component.scss
@@ -13,9 +13,11 @@
 .body-trimmed {
     width: calc(100% - 16.5625rem);
     margin-left: 16.5625rem;
+    height: 100%;
 }
 
 .body-md-screen {
     width: calc(100% - 5rem);
     margin-left: 5rem;
+    height: 100%;
 }
