--- a/inventory-app/src/app/dashboard/dashboard.component.html
+++ b/inventory-app/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,20 @@
 <body >
+    <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title class="page-header">{{warehouseName}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="content">
+        <h5 class="text-color">Address : {{warehouseStreet}}</h5>
+        <h5 class="text-color">City : {{warehouseCity}}</h5>
+        <h5 class="text-color">State : {{warehouseState}}</h5>
+        <h5 class="text-color">Zipcode : {{warehouseZipcode}}</h5>
+        <h5 class="text-color">Capacity : {{warehouseCapacity}}</h5>
 
+        </mat-card-content>
+      </mat-card>
+<p-chart class="pie-chart" width="40vw" height="40vh" type="doughnut" [data]="datadoughnut"></p-chart>
 
-<app-map class="map"></app-map>
-<p-chart class="pie-chart" width="30vw" height="30vh" type="doughnut" [data]="datadoughnut"></p-chart>
-
-
+<app-warehouse-list class="warehouselist"></app-warehouse-list>
 
 </body>
