--- a/inventory-app/src/app/dashboard/dashboard.component.scss
+++ b/inventory-app/src/app/dashboard/dashboard.component.scss
@@ -1,9 +1,51 @@
 .pie-chart{
     position: relative;
     float: right;
-    z-index: 2;
+    z-index: 3;
+    margin-right: 5vw;
 }
-.map{
-    position: fixed;
-    z-index: 1;
+
+
+
+.example-card {
+    width: 40vw;
+    height: 90vh;
+    display: inline-block;
+    position: absolute;
+    background-color: #1B2430 ;
+  }
+  
+  .example-header-image {
+    background-image: url("https://www.citypng.com/public/uploads/small/21635365235phsrahbeu1ptkk8trceljmaimmyicahy02uks0jlpohyfwmqcs6cooitd4ai1veggswyhoakk2ayh3ctvad4qbsh6qukto03to2m.png");
+    background-size: cover;
+    width: 5vw;
+    height: 10vh;
+  }
+
+
+.warehouselist{
+	position: relative;
+    z-index: 2;
+    display: inline-block;
+    margin-left: 50vw;
+    margin-top: 10vh;
+}
+
+.text-color{
+    margin-top: 13vh;
+    font-size: 30px;
+    color :  #00ADB5;
+    margin-left: 5rem;
+}
+
+.page-header{
+    font-size: 50px;
+}
+
+::ng-deep .mat-card-header{
+    height: 15vh;
+    align-items: center;
+    color :  #00ADB5;
+    margin-left : 5rem;     
+    margin-bottom : 2rem;       
 }
