--- a/inventory-app/src/styles.scss
+++ b/inventory-app/src/styles.scss
@@ -16,11 +16,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 body {
     position: relative;
     font-family: 'Roboto', sans-serif;
+    background-color: #A6B1E1;
 }
 
 .card {
