--- a/inventory-app/src/app/dashboard/dashboard.component.html
+++ b/inventory-app/src/app/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
 
         </mat-card-content>
       </mat-card>
-<p-chart class="pie-chart" width="40vw" height="40vh" type="doughnut" [data]="datadoughnut"></p-chart>
+<p-chart  #char class="pie-chart" width="40vw" height="40vh" type="doughnut" [data]="datadoughnut"></p-chart>
 
 <app-warehouse-list class="warehouselist"></app-warehouse-list>
 
