--- a/inventory-app/src/styles.scss
+++ b/inventory-app/src/styles.scss
@@ -1,5 +1,7 @@
 @import '~@angular/material/theming';
 @include mat-core();
+$primary: #1B2430;
+
 $my-app-primary: mat-palette($mat-pink);
 $my-app-accent: mat-palette($mat-pink, A200, A100, A400);
 $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent);
