--- a/inventory-app/src/app/dashboard/dashboard.component.html
+++ b/inventory-app/src/app/dashboard/dashboard.component.html
@@ -5,11 +5,11 @@
           <mat-card-title class="page-header">{{warehouseName}}</mat-card-title>
         </mat-card-header>
         <mat-card-content class="content">
-        <h5 class="text-color">Address : {{warehouseStreet}}</h5>
-        <h5 class="text-color">City : {{warehouseCity}}</h5>
-        <h5 class="text-color">State : {{warehouseState}}</h5>
-        <h5 class="text-color">Zipcode : {{warehouseZipcode}}</h5>
-        <h5 class="text-color">Capacity : {{warehouseCapacity}}</h5>
+        <h5 class="text-color">Address : <span class="text-item">{{warehouseStreet}}</span></h5>
+        <h5 class="text-color">City : <span class="text-item">{{warehouseCity}}</span></h5>
+        <h5 class="text-color">State : <span class="text-item">{{warehouseState}}</span></h5>
+        <h5 class="text-color">Zipcode : <span class="text-item">{{warehouseZipcode}}</span></h5>
+        <h5 class="text-color">Capacity : <span class="text-item">{{warehouseCapacity}}</span></h5>
 
         </mat-card-content>
       </mat-card>
