--- a/inventory-app/src/app/sidenav/sidenav.component.html
+++ b/inventory-app/src/app/sidenav/sidenav.component.html
@@ -1,3 +1,4 @@
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
 <mat-toolbar class="top-bar" color="primary">
     <mat-toolbar-row>
