--- a/inventory-app/src/app/warehouse/warehouse.component.html
+++ b/inventory-app/src/app/warehouse/warehouse.component.html
@@ -1,5 +1,8 @@
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+
+<div><span class = "title">Warehouse List</span></div>
+
 <div class="card">
-    <div class="card-head">Warehouse List</div>
     <div class="card-body">
     <mat-form-field  appTextTheme appearance="standard">
       <mat-label  appTextTheme>Filter</mat-label>
