--- a/inventory-app/src/app/dashboard/dashboard.component.scss
+++ b/inventory-app/src/app/dashboard/dashboard.component.scss
@@ -13,10 +13,12 @@
     display: inline-block;
     position: absolute;
     background-color: #1B2430 ;
+    box-shadow: 0 .25rem .5rem #1B2430;
+
   }
   
   .example-header-image {
-    background-image: url("https://www.citypng.com/public/uploads/small/21635365235phsrahbeu1ptkk8trceljmaimmyicahy02uks0jlpohyfwmqcs6cooitd4ai1veggswyhoakk2ayh3ctvad4qbsh6qukto03to2m.png");
+    background-image:url(https://i.imgur.com/6E59EfC.png);
     background-size: cover;
     width: 5vw;
     height: 10vh;
@@ -37,9 +39,17 @@
     color :  #00ADB5;
     margin-left: 5rem;
 }
+.text-item{
+    font-family: 'Montserrat';
+    font-size: 30px;
+    font-weight: 900;
 
+    color:#FF2E63;
+}
 .page-header{
     font-size: 50px;
+    color:#FF2E63;
+
 }
 
 ::ng-deep .mat-card-header{
