--- a/inventory-app/src/app/sidenav/sidenav.component.scss
+++ b/inventory-app/src/app/sidenav/sidenav.component.scss
@@ -1,13 +1,22 @@
 $primary: #1B2430;
 .top-bar{
     background-color: $primary;
+    box-shadow: .25rem .25rem .5rem #1B2430;
+
 }
 .outer-text{
     color: #00ADB5;
     margin-left: 90rem;
+    font-family: 'Montserrat';
+    font-size: 20px;
+    font-weight: 900;
+
 }
 .inner-text{
-    
+    font-family: 'Montserrat';
+    font-size: 20px;
+    font-weight: 900;
+
     color:#FF2E63;
 }
 .sidenav {
@@ -18,6 +27,7 @@ $primary: #1B2430;
     top: 0;
     width: 5rem;
     height: 100vh;
+    box-shadow: 0 .25rem .5rem #1B2430;
 
     .logo-container {
         display: flex;
