--- a/inventory-app/src/app/warehouse/warehouse.component.scss
+++ b/inventory-app/src/app/warehouse/warehouse.component.scss
@@ -12,14 +12,24 @@ table {
     width: 100%;
 }
 
+.title{
+    font-size: 2rem;
+    font-weight: 900;
+    font-family: 'Montserrat';
+    text-underline-position: under;
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    color:  #1B2430  ;
+
+}
 
   
-   ::ng-deep.mat-form-field-underline {
+::ng-deep.mat-form-field-underline {
     /*change color of underline*/
     background-color: #00ADB5 !important;
   } 
   
-  ::ng-deep.mat-form-field-ripple {
+::ng-deep.mat-form-field-ripple {
    /*change color of underline when focused*/
    background-color: #00ADB5 !important;
   }
